z-index bug fixed

--- a/src/styles/_Login.scss
+++ b/src/styles/_Login.scss
@@ -12,6 +12,7 @@
 }
 
 .login-fg {
+  z-index: 5;
   position: fixed;
   padding: 5rem 3rem 1rem 3rem;
   margin: 5rem;
