--- a/src/styles/_Navbar.scss
+++ b/src/styles/_Navbar.scss
@@ -1,18 +1,19 @@
 .navbar-container {
+  z-index: 5;
   position: sticky;
   z-index: 1;
   color: #fff;
   display: grid;
   @media screen and (min-width: 1000px) {
     grid-template-areas:
-      'logo search category user'
-      'logo  lower lower lower';
+      "logo search category user"
+      "logo  lower lower lower";
     grid-template-columns: 0.1fr 0.3fr 0.6fr 1fr;
     grid-template-rows: 1fr 0.5fr;
   }
   @media screen and (max-width: 999px) {
     padding: 0 2rem;
-    grid-template-areas: 'logo search user';
+    grid-template-areas: "logo search user";
     grid-template-columns: 0.4fr 1fr 1fr;
     grid-template-rows: 1fr;
   }
