--- a/src/styles/_Register.scss
+++ b/src/styles/_Register.scss
@@ -13,6 +13,7 @@
 }
 
 .register-fg {
+  z-index: 5;
   position: fixed;
   padding: 5rem 3rem 1rem 3rem;
   margin: 5rem;
